# chitin

./: Cargo.toml  LICENSE  README.md  flamescope.json  slow_flamescope.json
example_manifests/: GH_example.txt
example_manifests/3 - Dynamic Spatial Patterns/: 3.3_GH_broadcast_swap_sum_manifest.txt
example_manifests/4 - Continuously Active Logic Circuits/: Fig4a-2-bit_adder_manifest.txt  Fig4b-binary_counter_init.txt  Fig4b-binary_counter_manifest.txt  Fig4c-Game_of_Life_one_cell_init.txt  logic_gate_colormap.txt
src/: button.rs  input.rs  input_parsers.rs  main.rs  reactions.rs  renderer.rs  simulator.rs  state.rs  textures.rs
test_resources/manifests/: basic_settings_manifest.txt  blank_settings_manifest.txt  first_included_manifest.txt  manifest_with_include.txt  second_included_manifest.txt
test_resources/manifests/init_states/: test_init_state.txt
